fix: adjust scroll threshold for navbar visibility

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -8,4 +8,5 @@
 .navbar.scrolled .navbar-brand i,
 .navbar.scrolled .navbar-brand span {
   color: black !important;
+  font-weight: bold !important;
 }
